# shared-container

./: CMakeLists.txt  README.md  build_and_run.sh
examples/: CMakeLists.txt  config.xml  config_schema.xml  container_monitor.cpp  containers_config.xml  create_from_xml.cpp  demo.cpp  demo1.cpp  demo3.cpp  ipc_reader.cpp  ipc_writer.cpp  persistence_demo.cpp  xml_config_demo.cpp
kernel/: Makefile  kcontainer.c  kcontainer_uapi.h  varser.c  varser_ioctl.h
user/: CMakeLists.txt
user/examples/: example.yaml
user/include/varser/: varser.hpp
user/src/: competitor.cpp  main.cpp  reader.cpp  varser.cpp  writer.cpp
userlib/: CMakeLists.txt  kcontainer.cpp  kcontainer.hpp  xml_config.cpp  xml_config.hpp
